# DnD_Session_Transcribe

./: .coverage  .gitignore  .pre-commit-config.yaml  AGENTS.md  CONTRIBUTING.md  README.md  initial_prompt.txt  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  run_whisperx.py
constants/: __init__.py  precision.py
docs/: ASR_Preflight_AutoTune.md  dnd_transcribe_prd.md  testing.md  transcription_feature_ideas.md  webapp_modernization_plan.md
docs/previews/: webui_root.html
functions/: alignment.py  asr.py  diarization.py  precise_rerun.py
helpers/: hotwords.py
scripts/: generate_webui_preview.py
src/dnd_session_transcribe/: __init__.py  cli.py  web.py
tests/: conftest.py  test_cli.py  test_web.py
tests/adapters/: test_copy_to_ram.py  test_ffmpeg.py  test_preprocess_audio.py  test_preview.py  test_read_duration_seconds.py
tests/features/: test_alignment.py  test_asr.py  test_decision_bookmarks.py  test_diarization.py  test_noise_retranscription.py  test_precise_rerun.py  test_scene_segmentation.py
tests/helpers/: test_atomic_json.py  test_audio_stats_analysis.py  test_auto_tune.py  test_preflight.py  test_spelling_map.py  test_text_utils.py  test_vad.py
tests/utilities/: test_config_diarization.py  test_huggingface.py  test_next_outdir.py  test_processing.py  test_write_files.py
tests/web/: test_services.py
utilities/: __init__.py  copy_to_ram.py  huggingface.py  preprocess_audio.py  processing.py  write_files.py
whisper_runner/: run_whisperx.py
whisper_runner/constants/: __init__.py  asr.py  diarization.py  profiles.py  (+1 more)
(+48 files in other folders)
